# mcu-libraries

./: CMakeLists.txt  Platform.cpp  Platform.h
IRSensor/: IRSensor.cpp  IRSensor.h
VisitSensor/: Beam.h  BeamObserver.cpp  BeamObserver.h  VisitSensor.cpp  VisitSensor.h
